Fix boton editar en vista especialidad

--- a/turno-smart/Views/Especialidad/Index.cshtml
+++ b/turno-smart/Views/Especialidad/Index.cshtml
@@ -59,7 +59,7 @@
                                             <!-- Botón para Editar -->
                                             <form method="get" asp-action="Edit" asp-route-id="@item.Id" id="edit-btn">
                                                 <button type="submit" class="btn btn-primary btn-sm mx-1" data-bs-toggle="modal" data-bs-target="#modal-edit">
-                                                    Editar Turno
+                                                    Editar
                                                 </button>
                                             </form>
 
