--- a/turno-smart/Views/Shared/_RegistrationSuccess.cshtml
+++ b/turno-smart/Views/Shared/_RegistrationSuccess.cshtml
@@ -1,13 +1,11 @@
 ﻿<div class="modal-header">
     <div class="modal-title h4">¡Registro Exitoso!</div>
-        <button type="button" class="btn-close" aria-label="Close">
-
-        </button>
+    <button type="button" class="btn-close" aria-label="Close" data-bs-dismiss="modal"></button>
     </div>
 <div class="modal-body">
     <div class="text-center">
         <p class="text-success mb-4">
-            Te hemos enviado un email de confirmación. Por favor, revisa tu bandeja de entrada para completar el registro.
+            Gracias por registrarte en nuestra clinica, a la brevedad seras dado de alta.
         </p>
     </div>
 </div>
