--- a/turno-smart/Views/Paciente/Create.cshtml
+++ b/turno-smart/Views/Paciente/Create.cshtml
@@ -61,7 +61,7 @@
                             <input asp-for="Provincia" class="form-control" />
                             <span asp-validation-for="Provincia" class="text-danger"></span>
                         </div>
-                        <div class="mb-3">
+                       @*  <div class="mb-3">
                             <label asp-for="Cobertura" class="form-label"></label>
                             <select asp-for="Cobertura" class="form-control">
                                 <option value="">Seleccione una opción</option>
@@ -69,7 +69,7 @@
                                 <option value="0">No</option>
                             </select>
                             <span asp-validation-for="Cobertura" class="text-danger"></span>
-                        </div>
+                        </div> *@
                         <div class="mb-3">
                             <label asp-for="Email" class="form-label"></label>
                             <input asp-for="Email" type="email" class="form-control" />
