--- a/turno-smart/Views/Paciente/Details.cshtml
+++ b/turno-smart/Views/Paciente/Details.cshtml
@@ -36,14 +36,14 @@
             <dt class="col-sm-4">Email</dt>
             <dd class="col-sm-8">@Model.Email</dd>
 
-            <dt class="col-sm-4">Cobertura</dt>
+            @* <dt class="col-sm-4">Cobertura</dt>
             <dd class="col-sm-8">
                 @if (Model.Cobertura == 0) {
                     <span class="badge bg-danger">No</span>
                 } else {
                     <span class="badge bg-success">Sí</span>
                 }
-            </dd>
+            </dd> *@
 
             <dt class="col-sm-4">Estado</dt>
             <dd class="col-sm-8">
