Labels en formulario de Perfil

--- a/turno-smart/Views/Account/Details.cshtml
+++ b/turno-smart/Views/Account/Details.cshtml
@@ -117,30 +117,39 @@
                                 <input type="hidden" asp-for="Id" />
 
                                 <div class="col-md-6">
+                                     <label asp-for="Nombre" class="form-label"></label>
                                     <input asp-for="Nombre" class="form-control" placeholder="Nombre" />
                                 </div>
                                 <div class="col-md-6">
+                                     <label asp-for="Apellido" class="form-label"></label>
                                     <input asp-for="Apellido" class="form-control" placeholder="Apellido" />
                                 </div>
                                 <div class="col-md-6">
+                                     <label asp-for="DNI" class="form-label"></label>
                                     <input asp-for="DNI" class="form-control" placeholder="DNI" />
                                 </div>
                                 <div class="col-md-6">
+                                     <label asp-for="FechaNacimiento" class="form-label"></label>
                                     <input asp-for="FechaNacimiento" class="form-control" placeholder="Fecha de nacimiento" />
                                 </div>
                                 <div class="col-md-12">
+                                    <label asp-for="Email" class="form-label"></label>
                                     <input asp-for="Email" class="form-control" placeholder="Email" />
                                 </div>
                                 <div class="col-md-12">
+                                    <label asp-for="Telefono" class="form-label"></label>
                                     <input asp-for="Telefono" class="form-control" placeholder="Teléfono" />
                                 </div>
                                 <div class="col-md-12">
+                                    <label asp-for="Domicilio" class="form-label"></label>
                                     <input asp-for="Domicilio" class="form-control" placeholder="Docimicilio" />
                                 </div>
                                 <div class="col-md-6">
+                                    <label asp-for="Ciudad" class="form-label"></label>
                                     <input asp-for="Ciudad" class="form-control" placeholder="Ciudad" />
                                 </div>
                                 <div class="col-md-6">
+                                    <label asp-for="Provincia" class="form-label"></label>
                                     <input asp-for="Provincia" class="form-control" placeholder="Provincia" />
                                 </div>
                                 <div class="col-md-12">
