Validaciones formulario Perfil

--- a/turno-smart/Views/Paciente/Edit.cshtml
+++ b/turno-smart/Views/Paciente/Edit.cshtml
@@ -63,8 +63,8 @@
         @* <div class="mb-3">
             <label asp-for="Cobertura" class="form-label"></label>
             <select asp-for="Cobertura" class="form-control">
-                <option value="">Seleccione una opción</option>
-                <option value="1">Sí</option>
+                <option value="">Seleccione una opciï¿½n</option>
+                <option value="1">Sï¿½</option>
                 <option value="0">No</option>
             </select>
             <span asp-validation-for="Cobertura" class="text-danger"></span>
