--- a/turno-smart/Views/Account/Details.cshtml
+++ b/turno-smart/Views/Account/Details.cshtml
@@ -119,38 +119,47 @@
                                 <div class="col-md-6">
                                      <label asp-for="Nombre" class="form-label"></label>
                                     <input asp-for="Nombre" class="form-control" placeholder="Nombre" />
+                                    <span asp-validation-for="Nombre" class="text-danger"></span>
                                 </div>
                                 <div class="col-md-6">
                                      <label asp-for="Apellido" class="form-label"></label>
                                     <input asp-for="Apellido" class="form-control" placeholder="Apellido" />
+                                    <span asp-validation-for="Apellido" class="text-danger"></span>
                                 </div>
                                 <div class="col-md-6">
                                      <label asp-for="DNI" class="form-label"></label>
                                     <input asp-for="DNI" class="form-control" placeholder="DNI" />
+                                    <span asp-validation-for="DNI" class="text-danger"></span>
                                 </div>
                                 <div class="col-md-6">
                                      <label asp-for="FechaNacimiento" class="form-label"></label>
                                     <input asp-for="FechaNacimiento" class="form-control" placeholder="Fecha de nacimiento" />
+                                    <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
                                 </div>
                                 <div class="col-md-12">
                                     <label asp-for="Email" class="form-label"></label>
                                     <input asp-for="Email" class="form-control" placeholder="Email" />
+                                    <span asp-validation-for="Email" class="text-danger"></span>
                                 </div>
                                 <div class="col-md-12">
                                     <label asp-for="Telefono" class="form-label"></label>
                                     <input asp-for="Telefono" class="form-control" placeholder="Teléfono" />
+                                    <span asp-validation-for="Telefono" class="text-danger"></span>
                                 </div>
                                 <div class="col-md-12">
                                     <label asp-for="Domicilio" class="form-label"></label>
                                     <input asp-for="Domicilio" class="form-control" placeholder="Docimicilio" />
+                                    <span asp-validation-for="Domicilio" class="text-danger"></span>
                                 </div>
                                 <div class="col-md-6">
                                     <label asp-for="Ciudad" class="form-label"></label>
                                     <input asp-for="Ciudad" class="form-control" placeholder="Ciudad" />
+                                    <span asp-validation-for="Ciudad" class="text-danger"></span>
                                 </div>
                                 <div class="col-md-6">
                                     <label asp-for="Provincia" class="form-label"></label>
                                     <input asp-for="Provincia" class="form-control" placeholder="Provincia" />
+                                    <span asp-validation-for="Provincia" class="text-danger"></span>
                                 </div>
                                 <div class="col-md-12">
                                     <button type="submit" class="btn btn-custom w-100">Confirmar</button>
@@ -164,10 +173,10 @@
                             <h2 class="h4 mb-4">Actualizá tu contraseña</h2>
                             <div class="row g-3">
                                 <div class="col-md-12">
-                                    <input class="form-control" placeholder="Contraseña actual"/>
+                                    <input class="form-control" placeholder="Contraseña actual" required/>
                                 </div>
                                 <div class="col-md-12">
-                                    <input asp-for="Password" class="form-control" placeholder="Nueva contraseña" />
+                                    <input type="password" asp-for="Password" class="form-control" placeholder="Nueva contraseña" required/>
                                 </div>
                                 <div class="col-md-12">
                                     <button type="submit" class="btn btn-custom w-100">Confirmar</button>
