--- a/turno-smart/Views/Paciente/Create.cshtml
+++ b/turno-smart/Views/Paciente/Create.cshtml
@@ -2,90 +2,87 @@
 @{
     ViewData["Title"] = "Crear Paciente";
 }
-
-<div class="container py-5">
-    <div class="row">
-        <div class="col-lg-8 offset-lg-2">
-            <h1 class="display-4 text-center mb-4">@ViewData["Title"]</h1>
-            <p class="lead text-center mb-5">
-                Complete los datos para crear un nuevo paciente en el sistema.
-            </p>
-
-            <div class="card shadow-sm">
-                <div class="card-body p-5">
-                    <form method="post">
-                        <div class="mb-3">
-                            <label asp-for="Nombre" class="form-label"></label>
-                            <input asp-for="Nombre" class="form-control" />
-                            <span asp-validation-for="Nombre" class="text-danger"></span>
-                        </div>
-
-                        <div class="mb-3">
-                            <label asp-for="Apellido" class="form-label"></label>
-                            <input asp-for="Apellido" class="form-control" />
-                            <span asp-validation-for="Apellido" class="text-danger"></span>
-                        </div>
-
-                        <div class="mb-3">
-                            <label asp-for="DNI" class="form-label"></label>
-                            <input asp-for="DNI" type="number" class="form-control" />
-                            <span asp-validation-for="DNI" class="text-danger"></span>
-                        </div>
-
-                        <div class="mb-3">
-                            <label asp-for="Telefono" class="form-label"></label>
-                            <input asp-for="Telefono" type="number" class="form-control" />
-                            <span asp-validation-for="Telefono" class="text-danger"></span>
-                        </div>
-
-                        <div class="mb-3">
-                            <label asp-for="FechaNacimiento" class="form-label"></label>
-                            <input asp-for="FechaNacimiento" type="date" class="form-control" />
-                            <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
-                        </div>
-
-                        <div class="mb-3">
-                            <label asp-for="Domicilio" class="form-label"></label>
-                            <input asp-for="Domicilio" class="form-control" />
-                            <span asp-validation-for="Domicilio" class="text-danger"></span>
-                        </div>
-
-                        <div class="mb-3">
-                            <label asp-for="Ciudad" class="form-label"></label>
-                            <input asp-for="Ciudad" class="form-control" />
-                            <span asp-validation-for="Ciudad" class="text-danger"></span>
-                        </div>
-
-                        <div class="mb-3">
-                            <label asp-for="Provincia" class="form-label"></label>
-                            <input asp-for="Provincia" class="form-control" />
-                            <span asp-validation-for="Provincia" class="text-danger"></span>
-                        </div>
-                       @*  <div class="mb-3">
-                            <label asp-for="Cobertura" class="form-label"></label>
-                            <select asp-for="Cobertura" class="form-control">
-                                <option value="">Seleccione una opción</option>
-                                <option value="1">Sí</option>
-                                <option value="0">No</option>
-                            </select>
-                            <span asp-validation-for="Cobertura" class="text-danger"></span>
-                        </div> *@
-                        <div class="mb-3">
-                            <label asp-for="Email" class="form-label"></label>
-                            <input asp-for="Email" type="email" class="form-control" />
-                            <span asp-validation-for="Email" class="text-danger"></span>
-                        </div>
-
-                        <input type="hidden" asp-for="Cobertura" />
-                        <input type="hidden" asp-for="FechaAlta" />
-
-                        <div class="d-flex justify-content-between align-items-center">
-                            <button type="submit" class="btn btn-primary btn-lg">Crear Paciente</button>
-                            <a href="@Url.Action("Index", "Paciente")" class="btn btn-outline-secondary btn-lg">Cancelar</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+@{
+    Layout = null;
+}
+<div class="modal-header">
+    <div class="modal-title h4" id="modal-create-label">Complete los datos para crear un nuevo paciente en el sistema.</div>
+    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
+
+
+<form asp-action="Create" method="post" id="create-form">
+    <div class="modal-body">
+
+        <div class="mb-3">
+            <label asp-for="Nombre" class="form-label"></label>
+            <input asp-for="Nombre" class="form-control" />
+            <span asp-validation-for="Nombre" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Apellido" class="form-label"></label>
+            <input asp-for="Apellido" class="form-control" />
+            <span asp-validation-for="Apellido" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="DNI" class="form-label"></label>
+            <input asp-for="DNI" type="number" class="form-control" />
+            <span asp-validation-for="DNI" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Telefono" class="form-label"></label>
+            <input asp-for="Telefono" type="number" class="form-control" />
+            <span asp-validation-for="Telefono" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="FechaNacimiento" class="form-label"></label>
+            <input asp-for="FechaNacimiento" type="date" class="form-control" />
+            <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Domicilio" class="form-label"></label>
+            <input asp-for="Domicilio" class="form-control" />
+            <span asp-validation-for="Domicilio" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Ciudad" class="form-label"></label>
+            <input asp-for="Ciudad" class="form-control" />
+            <span asp-validation-for="Ciudad" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Provincia" class="form-label"></label>
+            <input asp-for="Provincia" class="form-control" />
+            <span asp-validation-for="Provincia" class="text-danger"></span>
+        </div>
+        @*  <div class="mb-3">
+            <label asp-for="Cobertura" class="form-label"></label>
+            <select asp-for="Cobertura" class="form-control">
+                <option value="">Seleccione una opción</option>
+                <option value="1">Sí</option>
+                <option value="0">No</option>
+            </select>
+            <span asp-validation-for="Cobertura" class="text-danger"></span>
+        </div> *@
+        <div class="mb-3">
+            <label asp-for="Email" class="form-label"></label>
+            <input asp-for="Email" type="email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+
+        <input type="hidden" asp-for="Cobertura" />
+        <input type="hidden" asp-for="FechaAlta" />
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="submit" class="btn btn-primary d-flex align-items-center">
+            CrearPaciente
+        </button>
+    </div>
+</form>
